force-app/main/default/objects/Operations_Requests__c/Operations_Requests__c.object-meta.xml
<CustomObject>
    <label>Operations Request</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Operations Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operations Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>