force-app/main/default/objects/Operations_Requests__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The company the new users is associated with.</description>
    <inlineHelpText>Enter the name of the company that the new user is associated with. If the company is not listed, click the new button inside the search window to create it.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Operations Requests</relationshipLabel>
    <relationshipName>Operations_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>