force-app/main/default/objects/Operations_Requests__c/fields/Completed_in_FF__c.field-meta.xml
<CustomField>
    <fullName>Completed_in_FF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when the request has been completed in Financialforce.</description>
    <inlineHelpText>Check this box when the request has been completed in Financialforce.</inlineHelpText>
    <label>Completed in FF</label>
    <type>Checkbox</type>
</CustomField>