force-app/main/default/objects/Operations_Requests__c/fields/Completed_in_NS__c.field-meta.xml
<CustomField>
    <fullName>Completed_in_NS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when the request has been completed in Netsuite.</description>
    <inlineHelpText>Check this box when the request has been completed in Netsuite.</inlineHelpText>
    <label>Completed in NS</label>
    <type>Checkbox</type>
</CustomField>