force-app/main/default/objects/Operations_Requests__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>What is the end date of the week movement is being requested?</description>
    <inlineHelpText>What is the end date of the week movement is being requested?</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>