force-app/main/default/objects/Operations_Requests__c/fields/Finance_Approval__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval__c</fullName>
    <description>Finance reviews the request and determines whether or not to approve.</description>
    <inlineHelpText>Finance reviews the request and determines whether or not to approve.</inlineHelpText>
    <label>Finance Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>