force-app/main/default/objects/Operations_Requests__c/fields/Finance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Finance_Notes__c</fullName>
    <description>Add any necessary notes pertaining to the record.</description>
    <inlineHelpText>Add any necessary notes pertaining to the record.</inlineHelpText>
    <label>Finance Notes</label>
    <type>TextArea</type>
</CustomField>