force-app/main/default/objects/Operations_Requests__c/fields/From_Assignment__c.field-meta.xml
<CustomField>
    <fullName>From_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Assignment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>pse__Assignment__c.pse__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.From_Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>pse__Assignment__c</referenceTo>
    <relationshipName>System_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>