force-app/main/default/objects/Operations_Requests__c/fields/From_Project__c.field-meta.xml
<CustomField>
    <fullName>From_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The project that the time entry was incorrectly logged to.</description>
    <inlineHelpText>Please indicate which project the time entry was incorrectly logged to.</inlineHelpText>
    <label>From Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipName>System_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>