force-app/main/default/objects/Operations_Requests__c/fields/Include_in_Utilization_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Utilization_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Utilization Reporting</label>
    <type>Checkbox</type>
</CustomField>