force-app/main/default/objects/Operations_Requests__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The milestone a time entry needs to be logged to.</description>
    <inlineHelpText>If a time entry was logged to an incorrect milestone, please provide the milestone it should be changed to.</inlineHelpText>
    <label>Milestone</label>
    <referenceTo>pse__Milestone__c</referenceTo>
    <relationshipName>System_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>