force-app/main/default/objects/Operations_Requests__c/fields/Milwaukee_Based2__c.field-meta.xml
<CustomField>
    <fullName>Milwaukee_Based2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milwaukee Based2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Operations Requests (Milwaukee Based?)</relationshipLabel>
    <relationshipName>Operations_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>