force-app/main/default/objects/Operations_Requests__c/fields/Milwaukee_Based__c.field-meta.xml
<CustomField>
    <fullName>Milwaukee_Based__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milwaukee Based?</label>
    <type>Checkbox</type>
</CustomField>