force-app/main/default/objects/Operations_Requests__c/fields/Nonbill_Forecast_Details__c.field-meta.xml
<CustomField>
    <fullName>Nonbill_Forecast_Details__c</fullName>
    <description>Schedule details for the nonbill resource.</description>
    <inlineHelpText>Please provide details on the scope of the nonbill schedule, including dates nonbill time is needed and amount of nonbill hours per week.</inlineHelpText>
    <label>Nonbill Forecast Details</label>
    <type>TextArea</type>
</CustomField>