force-app/main/default/objects/Operations_Requests__c/fields/Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Planned_Hours__c</fullName>
    <description>Number of nonbill hours to be schedule for this resource.</description>
    <inlineHelpText>Proved the number of nonbill hours forecasted for this resource.</inlineHelpText>
    <label>Planned Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>