force-app/main/default/objects/Operations_Requests__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Which project is the request for?</description>
    <inlineHelpText>Which project is the request for?</inlineHelpText>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipName>System_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>