force-app/main/default/objects/Operations_Requests__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The PM assigned to the project.</description>
    <inlineHelpText>Who is the PM assigned to the project?</inlineHelpText>
    <label>Project Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>PSA Resource</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>System_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>