force-app/main/default/objects/Operations_Requests__c/fields/Reports_To__c.field-meta.xml
<CustomField>
    <fullName>Reports_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reports To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>PSA Resource</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Operations Requests (Reports To)</relationshipLabel>
    <relationshipName>Operations_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>