force-app/main/default/objects/Operations_Requests__c/fields/Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Request_Name__c</fullName>
    <formula>IF( RecordType.Name = &quot;Project Workbook Load&quot;, HYPERLINK(&quot;https://7summitsagency.my.salesforce.com/&quot; &amp; Id, RecordType.Name + &quot;-&quot; + Opportunity__r.Name),
IF( RecordType.Name = &quot;New User&quot;, HYPERLINK(&quot;https://7summitsagency.my.salesforce.com/&quot; &amp; Id, RecordType.Name + &quot;-&quot; + First_Name__c + &quot; &quot; + Last_Name__c),
IF( RecordType.Name = &quot;Nonbill Assignment&quot;,HYPERLINK(&quot;https://7summitsagency.my.salesforce.com/&quot; &amp; Id, RecordType.Name + &quot;-&quot; + Project__r.Name),
IF( RecordType.Name = &quot;Time Movement&quot;, HYPERLINK(&quot;https://7summitsagency.my.salesforce.com/&quot; &amp; Id,  RecordType.Name + &quot;-&quot; + From_Assignment__r.pse__Resource__r.psa_report__Resource_Name__c + &quot;-&quot; + From_Project__r.Name), RecordType.DeveloperName ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Name</label>
    <type>Text</type>
</CustomField>