force-app/main/default/objects/Operations_Requests__c/fields/Request_Owner__c.field-meta.xml
<CustomField>
    <fullName>Request_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user responsible for completing the request.</description>
    <inlineHelpText>The user responsible for completing the request.</inlineHelpText>
    <label>Request Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>PSA Resource</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Operations_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>