force-app/main/default/objects/Operations_Requests__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Which resource is the request pertaining to?</description>
    <inlineHelpText>Which resource is the request pertaining to?</inlineHelpText>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Operations Requests (Resource)</relationshipLabel>
    <relationshipName>System_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>