force-app/main/default/objects/Operations_Requests__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Submitted = Created but not assigned 
Assigned = Owner assigned but not completed
Completed = Completed in Financialforce and Netsuite if necessary</description>
    <inlineHelpText>Submitted = Created but not assigned yet
Assigned = Owner assigned but not completed
Completed = Completed in Netsuite AND Financialforce</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>