force-app/main/default/objects/Operations_Requests__c/fields/Target_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Target_Utilization__c</fullName>
    <label>Target Utilization</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>