force-app/main/default/objects/Operations_Requests__c/fields/Time_Movement_Details__c.field-meta.xml
<CustomField>
    <fullName>Time_Movement_Details__c</fullName>
    <description>Provide a detailed description of the time movement request including dates, number of hours, billable vs nonbill, etc.</description>
    <inlineHelpText>Provide a detailed description of the time movement request including date, number of hours, billable vs nonbill, etc.</inlineHelpText>
    <label>Time Movement Details</label>
    <type>TextArea</type>
</CustomField>