force-app/main/default/objects/Operations_Requests__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>A user&apos;s specific, individual title.</description>
    <inlineHelpText>Please populate this field with a user&apos;s title, which can be found in Insperity.</inlineHelpText>
    <label>Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>