force-app/main/default/objects/Operations_Requests__c/fields/To_Project__c.field-meta.xml
<CustomField>
    <fullName>To_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The project that time entry should be moved to.</description>
    <inlineHelpText>Please indicate which project the time entry should be moved to.</inlineHelpText>
    <label>To Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipName>System_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>