force-app/main/default/objects/Operations_Requests__c/fields/User_Created_in_FF__c.field-meta.xml
<CustomField>
    <fullName>User_Created_in_FF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User has been added with a profile, SF/Platform license, permission sets, PSA package license, contact record, permissions controls (if necessary), and has been assigned to internal projects for Holiday &amp; PTO.</description>
    <inlineHelpText>Check this box when the user has been added with a profile, SF/Platform license, permission sets, PSA package license, contact record, permissions controls (if necessary), and has been assigned to internal projects for Holiday &amp; PTO.</inlineHelpText>
    <label>User Created in FF</label>
    <type>Checkbox</type>
</CustomField>