force-app/main/default/objects/Operations_Requests__c/recordTypes/New_User.recordType-meta.xml
<RecordType>
    <fullName>New_User</fullName>
    <active>true</active>
    <description>Complete to request the creation of a new PSA resource.</description>
    <label>New User</label>
</RecordType>