force-app/main/default/objects/Operations_Requests__c/recordTypes/Nonbill_Assignment.recordType-meta.xml
<RecordType>
    <fullName>Nonbill_Assignment</fullName>
    <active>true</active>
    <description>Requests to have a nonbill assignment created on a project.</description>
    <label>Nonbill Assignment</label>
</RecordType>