force-app/main/default/objects/Operations_Requests__c/recordTypes/Project_Workbook_Load.recordType-meta.xml
<RecordType>
    <fullName>Project_Workbook_Load</fullName>
    <active>true</active>
    <description>Requests to have a project workbook loaded for a new project.</description>
    <label>Project Workbook Load</label>
</RecordType>