force-app/main/default/objects/Operations_Requests__c/recordTypes/Time_Movement.recordType-meta.xml
<RecordType>
    <fullName>Time_Movement</fullName>
    <active>true</active>
    <description>Requests to edit time logged - billable status, milestone, assignment, project, etc.</description>
    <label>Time Movement</label>
</RecordType>