force-app/main/default/objects/Operations_Requests__c/listViews/New_User_Completed.listView-meta.xml
<ListView>
    <fullName>New_User_Completed</fullName>
    <columns>Request_Name__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Operations_Requests__c.New_User</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>New User - Completed</label>
    <language>en_US</language>
</ListView>