force-app/main/default/objects/Operations_Requests__c/listViews/Nonbill_Assignment_Completed.listView-meta.xml
<ListView>
    <fullName>Nonbill_Assignment_Completed</fullName>
    <columns>Request_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>Nonbill_Assignment</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Nonbill Assignment - Completed</label>
    <language>en_US</language>
</ListView>