force-app/main/default/objects/Operations_Requests__c/listViews/Pending_Operations_Requests.listView-meta.xml
<ListView>
    <fullName>Pending_Operations_Requests</fullName>
    <columns>NAME</columns>
    <columns>Request_Name__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Request_Owner__c</columns>
    <columns>Finance_Approval__c</columns>
    <columns>Completed_in_FF__c</columns>
    <columns>Completed_in_NS__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>Pending Operations Requests</label>
    <language>en_US</language>
    <queue>Operations_Request</queue>
</ListView>