force-app/main/default/objects/Operations_Requests__c/listViews/Time_Movement_Completed.listView-meta.xml
<ListView>
    <fullName>Time_Movement_Completed</fullName>
    <columns>Request_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Request_Owner__c</columns>
    <columns>From_Assignment__c</columns>
    <columns>To_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>Time_Movement</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Time Movement - Completed</label>
    <language>en_US</language>
</ListView>